2003-06-10  William Jon McCann  <mccann@jhu.edu>

	* games-frame.c (games_frame_set_label): Added
	games_frame_set_label function.

2003-06-09  William Jon McCann  <mccann@jhu.edu>

	* games-frame.h:
	* games-frame.c: New functions to create a HIG compliant
	frame widget.

2003-06-06  Callum McKenzie  <callum@physics.otago.ac.nz>

	* games-gconf.c (games_gconf_sanity_check_string): Remove a
	compiler warning.
	(games_gconf_get_string): Initialise the error *, gconf likes
	that.

2003-06-05  William Jon McCann  <mccann@jhu.edu>

	* games-gconf.c (games_gconf_sanity_check_string): Destroy dialog
	after a response.  This wasn't noticed because it has always been
	used right before a game exits with an error.

2003-06-04  William Jon McCann  <mccann@jhu.edu>

	* games-gconf.c: Use public API to set use-markup.

2003-05-09  Callum McKenzie  <callum@physics.otago.ac.nz>

	* games-gconf.c (games_gconf_sanity_check_string): i18n fixups for
	marked up messages. Fixes bug #112575. Also HIG fixups as per bug
	#112244.

2003-03-06  Ross Burton  <ross@burtonini.com>

	* games-gconf.[ch]: GConf utility functions for the games. So far
	a safe get_string() method which takes a default, and a
	string-based sanity check (check it exists, display warning if it
	doesn't).

2002-04-16  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am:
	* games-clock.c: (games_clock_update):
	forgot to commit fix for a warning

2002-03-07  Juan Pablo Mendoza <jpablo@gnome.org>

	* games-clock.c: Apply patch from Tommi Komulainen,
	  to display the correct numbers of minutes.

2002-01-09  Juan Pablo Mendoza <jpablo@gnome.org>

	* games-clock.c: Fix the time calculation.

2001-12-30  Juan Pablo Mendoza <jpablo@gnome.org>

	* games-clock.c: Merge a changue from gnomines/clock.c.

2001-12-23  Mark McLoughlin  <mark@skynet.ie>

	* games-clock.[ch]: copied from iagno/clock.[ch]. Change 
	the format to be like the old GtkClock.
