@@ -1,3 +1,8 @@
+2003-06-11  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* games-frame.c (games_frame_set_label): Compile fixups for those
+	of us still using ANSI C, bad Jon :).
+
 2003-06-10  William Jon McCann  <mccann@jhu.edu>
 
 	* games-frame.c (games_frame_set_label): Added
